--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,18 +5,21 @@ edition = "2021"
 description = "A library of ported/optimized algorithms and other useful code snippets"
 
 [dependencies]
-criterion = "0.5.1"
-crossbeam = "0.8.4"
-flamegraph = "0.6.5"
+criterion = { version = "0.5.1", features = ["html_reports"] }
 fxhash = "0.2.1"
-num_cpus = "1.16.0"
+once_cell = "1.19.0"
 rand = "0.8.5"
 rayon = "1.10.0"
+safe_arch = "0.7.2"
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0.118"
 
 [lib]
 name = "algos_n_stuff"
 path = "src/lib.rs"
+
+[dev-dependencies]
+criterion = "0.5.1"
 
 [[bench]]
 name = "benchmark"
@@ -24,3 +27,9 @@ harness = false
 
 [profile.bench]
 debug = true
+lto = true
+codegen-units = 1
+
+[profile.release]
+lto = true
+codegen-units = 1
